<resources>
    <string name="app_name">TrabalhoP2</string>
    <string name="clientes">CLIENTES</string>
    <string name="encomendas">Encomendas</string>
    <string name="flores">FLORES</string>
    <string name="nome_da_flor">Nome da flor:</string>
    <string name="tipo">Tipo:</string>
    <string name="preco">Preço (R$):</string>
    <string name="salvar">SALVAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="pago">Pago antes da entrega?</string>
    <string name="cliente">Cliente:</string>
    <string name="nao">Não</string>
    <string name="sim">Sim</string>
    <string name="endereco">Endereço:</string>
    <string name="cpf">CPF:</string>
    <string name="nome">Nome:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tipo_da_flor">Tipo da flor:</string>
    <string name="flor">Flor:</string>
    <string name="bairro">Bairro:</string>
    <string name="logradouro">Logradouro:</string>
    <string name="complemento">Complemento:</string>
</resources>