<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.EncomendasFragment">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/idCliente_encomendasFragment"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:ems="10"
            android:hint="@string/cliente"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/idEndereco_encomendasFragment"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/endereco"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/idPago_encomendasFragment"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:ems="10"
                android:hint="@string/pago"
                android:inputType="textPersonName"
                android:autofillHints="" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="@string/nao" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:text="@string/sim" />
        </LinearLayout>

        <Button
            android:id="@+id/idBtnSalvar_encomendasFragment"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/salvar" />

        <Button
            android:id="@+id/idBtnCancelar_encomendasFragment"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/cancelar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/idRecyclerView_encomendasFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>