<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.pessoasFragment">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/idNome_pessoasFragment"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:ems="10"
            android:hint="@string/nome"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/idCpf_pessoasFragment"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:ems="10"
            android:hint="@string/cpf"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/idEndereco_pessoasFragment"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/endereco"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/idBtnSalvar_pessoasFragment"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/salvar" />

        <Button
            android:id="@+id/idBtnCancelar_pessoasFragment"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/cancelar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/idRecyclerView_pessoasFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>