<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FloresFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/idNomeFlor_floresFragment"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:ems="10"
            android:hint="@string/nome_da_flor"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/idTipo_floresFragment"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:ems="10"
            android:hint="@string/tipo"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/idPreco_floresFragment"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:ems="10"
            android:hint="@string/preco"
            android:inputType="number"
            android:autofillHints="" />

        <Button
            android:id="@+id/idBtnSalvar_floresFragment"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/salvar" />

        <Button
            android:id="@+id/idBtnCancelar_floresFragment"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/cancelar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/idRecyclerView_floresFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>