<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:id="@+id/idLayoutPrincipal_main"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/idLayoutHorizontal_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/idBtnFlores"
                android:layout_width="wrap_content"
                android:layout_height="61dp"
                android:layout_weight="1"
                android:text="@string/flores"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/idBtnClientes"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:layout_weight="1"
                android:text="@string/clientes"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/idBtnEncomendas"
                android:layout_width="wrap_content"
                android:layout_height="63dp"
                android:layout_weight="1"
                android:text="@string/encomendas"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/idFrame_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>